@@ -4466,110 +4466,7 @@ function add_badge_page_link() {
 
 // Add a "Total spent on Steam" to the account details page
 function account_total_spent() {
-	storage.get(function(settings) {
-		if (settings.showtotal === undefined) { settings.showtotal = true; storage.set({'showtotal': settings.showtotal}); }
-		if (settings.showtotal) {
-			if ($('.accountBalance').length !== 0) {
-				currencyConversion.load().done(function() {
-					if (window.location.pathname.match("/account(/store_transactions)?/?$")) {
-						$(".account_setting_block:first .account_setting_sub_block:nth-child(2)").prepend("<div id='es_total' class='es_loading' style='text-align: center;'><span>" + localized_strings.loading + "</span></div>");
-
-						var game_total = 0,
-							gift_total = 0,
-							ingame_total = 0,
-							market_total = 0;
-
-						// Gather data
-						function add_it_up(txt) {
-							var history = JSON.parse(txt);
-							var history_html = $.parseHTML(history["html"]);
-							if (history_html) {
-								$.each(history_html, function() {
-									var type = $(this).find(".wht_type div:first").text().trim(),
-										amount = $(this).find(".wht_total").text().trim(),
-										items = $(this).find(".wht_items").text().trim();
-									if (amount && !amount.match("Credit") && type && !items.match("Wallet Credit")) {
-										var parsed = parse_currency(amount),
-											calc_value;
-										if (parsed.currency_type != user_currency) {
-											calc_value = currencyConversion.convert(parsed.value, parsed.currency_type, user_currency);
-										} else {
-											calc_value = parsed.value;
-										}
-										if (type.match(/^Purchase/)) game_total += calc_value;
-										if (type.match("Market Transaction")) market_total += calc_value;
-										if (type.match("Gift Purchase")) { gift_total += calc_value; }
-										if (type.match("In-Game Purchase")) ingame_total += calc_value;
-									}
-								});
-								return history["cursor"];
-							}
-						}
-
-						var sessionid = $(".page_header_ctn").text().match(/g_sessionID = \"(.+)\";/)[1];
-						var history_promise = (function () {
-							var deferred = new $.Deferred();
-							get_http(protocol + "//store.steampowered.com/account/AjaxLoadMoreHistory/?l=en&sessionid=" + sessionid, function(txt) {
-								var next = add_it_up(txt);
-								while (next) {
-									$.ajax({
-										async: false,
-										url: protocol + "//store.steampowered.com/account/AjaxLoadMoreHistory/?l=en&cursor%5Btimestamp_newest%5D=" + next["timestamp_newest"] + "&sessionid=" + sessionid
-									}).done(function(data) {
-										next = add_it_up(JSON.stringify(data));
-									});
-								}
-								deferred.resolve();
-							});
-							return deferred.promise();
-						})();
-
-						$.when.apply($, [history_promise]).done(function() {
-							var total_total = game_total + gift_total + ingame_total + market_total, html = '';
-							
-							if (game_total != 0) {
-								game_total = formatCurrency(parseFloat(game_total));
-								html += '<div class="accountRow accountBalance">';
-								html += '<div class="accountData price">' + game_total + '</div>';
-								html += '<div class="accountLabel" style="text-align: left;">' + localized_strings.store_transactions + ':</div></div>';
-							}
-							
-							if (gift_total != 0) {
-								gift_total = formatCurrency(parseFloat(gift_total));
-								html += '<div class="accountRow accountBalance">';
-								html += '<div class="accountData price">' + gift_total + '</div>';
-								html += '<div class="accountLabel" style="text-align: left;">' + localized_strings.gift_transactions + ':</div></div>';
-							}
-							
-							if (ingame_total != 0) {
-								ingame_total = formatCurrency(parseFloat(ingame_total));
-								html += '<div class="accountRow accountBalance">';
-								html += '<div class="accountData price">' + ingame_total + '</div>';
-								html += '<div class="accountLabel" style="text-align: left;">' + localized_strings.game_transactions + ':</div></div>';
-							}
-							
-							if (market_total != 0) {
-								market_total = formatCurrency(parseFloat(market_total));
-								html += '<div class="accountRow accountBalance">';
-								html += '<div class="accountData price">' + market_total + '</div>';
-								html += '<div class="accountLabel" style="text-align: left;">' + localized_strings.market_transactions + ':</div></div>';
-							}
-							
-							if (total_total != 0) {
-								total_total = formatCurrency(parseFloat(total_total));
-								html += '<div class="inner_rule" style="margin: 5px 0px 5px 0px;"></div>';
-								html += '<div class="accountRow accountBalance">';
-								html += '<div class="accountData price">' + total_total + '</div>';
-								html += '<div class="accountLabel" style="text-align: left;">' + localized_strings.total_spent + ':</div></div>';
-							}
-
-							$('#es_total').html(html);
-						});
-					}
-				});
-			}
-		}
-	});
+	$(".account_setting_block:first .account_setting_sub_block:nth-child(2) .account_manage_link:last").parent().after("<div><a class='account_manage_link' href='https://help.steampowered.com/en/accountdata/AccountSpend'>" + localized_strings.external_funds + "</a></div>");
 }
 
 // Source: https://greasyfork.org/en/scripts/12228-setmutationhandler/code
