@@ -84,7 +84,6 @@ var settings_defaults = {
 	"showregionalprice": "mouse",
 	"regional_countries": ["us", "gb", "eu1", "ru", "br", "au", "jp"],
 
-	"showtotal": true,
 	"showmarkettotal": false,
 	"showsteamrepapi": true,
 	"showmcus": true,
