@@ -157,6 +157,7 @@
     "visit_store": "Visit Store Page",
     "all": "All",
     "total_spent": "Total Spent",
+    "external_funds": "External Funds Used",
     "games_with_drops": "__dropsgames__ games with drops remaining",
     "binder_view": "Binder View",
     "view_stats": "View stats",
