@@ -450,9 +450,6 @@
 				</li>
 					<li class="header" id="community_general" data-locale-text="options.general">General</li>
 					<li>
-						<input type="checkbox" id="showtotal" data-setting="showtotal"><label for="showtotal" id="total_spent_text" data-locale-text="options.total_spent">Show total spent on account page</label>
-					</li>
-					<li>
 						<input type="checkbox" id="add_to_cart_wishlist" data-setting="add_to_cart_wishlist"><label for="add_to_cart_wishlist" id="add_to_cart_wishlist_text" data-locale-text="options.add_to_cart_wishlist">Show "Add to Cart" button on Wishlists</label>
 					</li>
 					<li>
